# ZJBrainSciencePlatformFileService

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: lint_test.yaml
client/: pyproject.toml
client/src/zjbs_file_client/: __init__.py  async_client.py  client.py
deploy/: Dockerfile  build-image-config.json  build-image.py  build_image.py  config.json  deploy.py  docker-compose.yaml  sync_image.py
deploy/envs/: production.json  testing.json
src/: bootstrap.py
src/zj_brain_science_platform_file_service/: __init__.py
src/zjbs_file_server/: api.py  app.py  error.py  log.py  main.py  model.py  restful_api.py  service.py  settings.py  type.py  types.py  util.py
test/: __init__.py  conftest.py  test_client_api.py  test_download.py  test_restful.py  test_upload.py
