[project]
name = "zj-brain-science-platform-file-service"
version = "0.1.0"
description = "The file service of ZJBrainSciencePlatform"
authors = [
    { name = "蔡涛", email = "caitao@zhejianglab.com" }
]
dependencies = [
    "fastapi>=0.103.1",
    "uvicorn>=0.23.2",
    "pydantic>=2.3.0",
    "pydantic-settings>=2.0.3",
    "loguru>=0.7.2",
    "python-multipart>=0.0.6",
]
readme = "README.md"
requires-python = ">= 3.8"
license = { text = "GPL-3.0-only" }
classifiers = ["Private :: Do Not Upload"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pip",
    "setuptools",
    "ipython>=8.12.2",
    "rich>=13.5.3",
    "black>=23.9.1",
    "isort>=5.12.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.black]
line-length = 120
target-version = ["py311"]
skip-magic-trailing-comma = true

[tool.isort]
profile = "black"
line_length = 120
src_paths = ["src"]
