[project]
name = "zjbs-file-server"
version = "0.1.0"
description = "The file server of ZJBrainSciencePlatform"
authors = [
    { name = "蔡涛", email = "caitao@zhejianglab.com" }
]
dependencies = [
    "fastapi>=0.103.1",
    "uvicorn>=0.23.2",
    "pydantic>=2.3.0",
    "pydantic-settings>=2.0.3",
    "loguru>=0.7.2",
    "python-multipart>=0.0.6",
]
readme = "README.md"
requires-python = ">= 3.8"
license = { text = "GPL-3.0-only" }
classifiers = ["Private :: Do Not Upload"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pip",
    "setuptools",
    "ipython>=8.12.2",
    "rich>=13.5.3",
    "black>=23.9.1",
    "isort>=5.12.0",
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "pre-commit>=3.5.0",
]
workspace = { members = ["client"] }

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/zjbs_file_server"]

[tool.ruff]
src = ["src", "test", "client/src"]
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "venv",
    ".pytest_cache",
    ".data",
    "dist",
]
line-length = 120
indent-width = 4
target-version = "py311"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = true
line-ending = "lf"

[tool.ruff.isort]
known-local-folder = ["zjbs_file_client"]

[tool.ruff.lint]
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.black]
line-length = 120
target-version = ["py311"]
skip-magic-trailing-comma = true

[tool.isort]
profile = "black"
line_length = 120
src_paths = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
